files/gatekeeper-templates/disallow-latest.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatest
  annotations:
    rulehub.id: disallow.latest.template
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatest
        deny[msg] {
          some c
          c := input.review.object.spec.containers[_]
          endswith(c.image, ":latest")
          msg := sprintf("image uses latest tag: %s", [c.image])
        }
